# TraceAnalysis

./: .dockerignore  .gitignore  .gitlab-ci.yml  .justfile  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
container-tracemadness/: Dockerfile  README.md  entrypoint.py
container-tracemadness/templates/: server.conf
container-tracemadness/templates/scripts/: bad.py  export.py  extractstatic.java  new-repo.py  repo-from-project.py
database-manager/: .justfile  Cargo.toml  README.md
database-manager/data/: schema.xml
database-manager/data/constants/aarch64/: registers.jsonl
database-manager/data/constants/arm32/: registers.jsonl
database-manager/data/constants/x86_32/: opcodes.jsonl  registers.jsonl
database-manager/data/constants/x86_64/: registers.jsonl  x86_64_syscall_spec.json
database-manager/data/constants/x86_64_32/: registers.jsonl
database-manager/src/: arango.rs  cli.rs  main.rs  schema.rs  template.dot  template.html  template.md
docs/: .justfile  book.toml
docs/src/: README.md  SUMMARY.md  dataflow.md  examples.md
docs/src/database/: README.md
docs/src/reference/: api.md
dynamic-dataflow/: .justfile  Cargo.toml
dynamic-dataflow/core/: Cargo.toml
dynamic-dataflow/core/src/: address.rs  analysis.rs  architecture.rs  delta.rs  error.rs  export.rs  lib.rs  operation.rs  oplog.rs  plugins.rs  seqcache.rs  slot.rs  space.rs  value.rs
dynamic-dataflow/core/src/database/: cache.rs  mod.rs  sql.rs
dynamic-dataflow/core/src/datastore/: mod.rs
dynamic-dataflow/core/src/lifter/: cache.rs  ghidra.rs  icicle.rs  mod.rs
dynamic-dataflow/export/arango/: Cargo.toml
dynamic-dataflow/export/arango/src/: lib.rs
dynamic-dataflow/export/csv/: Cargo.toml
dynamic-dataflow/export/csv/src/: lib.rs
dynamic-dataflow/export/jsonl/: Cargo.toml
dynamic-dataflow/export/jsonl/src/: lib.rs
dynamic-dataflow/plugins/cbranch/: Cargo.toml
dynamic-dataflow/plugins/cbranch/src/: lib.rs
dynamic-dataflow/plugins/fntrack/: Cargo.toml
dynamic-dataflow/plugins/fntrack/src/: lib.rs  writers.rs
dynamic-dataflow/plugins/fpmodels/: Cargo.toml
dynamic-dataflow/plugins/fpmodels/src/: lib.rs
dynamic-dataflow/plugins/pointsto/: Cargo.toml
dynamic-dataflow/plugins/pointsto/src/: lib.rs  writers.rs
dynamic-dataflow/plugins/syscalls/: Cargo.toml
dynamic-dataflow/plugins/syscalls/src/: lib.rs
dynamic-dataflow/src/: lib.rs
dynamic-trace/: .gitignore  .justfile  Cargo.toml  README.md
dynamic-trace/src/: collector.rs  lib.rs  record.rs
dynamic-trace/src/index/: merge_set.rs  segment_tree.rs  spacetime_index.rs  string_index.rs
examples/: README.md
examples/dropbear/: Dockerfile  README.md  entrypoint.sh
examples/dropbear/scripts/: parse_proc_maps.py  struct.xsl
examples/multithread/: Dockerfile  README.md  entrypoint.sh  make_sysroot.sh
examples/multithread/test-program/: Makefile  example.c
examples/simple/: Dockerfile.pin  Dockerfile.qemu-user  entrypoint-pin.sh  entrypoint-qemu-user.sh
examples/tiny/: Dockerfile  TraceScript.java  entrypoint.sh
examples/xz/: Dockerfile  README.md  entrypoint.sh  input
gdb-trace-server/: Cargo.toml
gdb-trace-server/src/: main.rs
gdb-trace-server/src/gdb/: arch.rs  mappings.rs  mod.rs  server.rs  stub.rs
ghidra-lifter/: .justfile  Cargo.toml  build.rs
ghidra-lifter/include/: lifter.h
ghidra-lifter/src/: lib.rs  lifter.cc
ghidra-lifter/tests/: no_cache.rs
ghidra-tracemadness/: .gitignore  .justfile  README.md  extension.properties
ghidra-tracemadness/ghidra_scripts/: CombineTraceLibs.java  extractcdg.java  extractcfg.py  extractstatic.java
ghidra-tracemadness/src/main/java/tracemadness/: ArangoClient.java  MadnessPlugin.java  MadnessPluginProvider.java  MadnessQuery.java  MadnessQueryCommand.java  MadnessQueryResultListener.java  View.java
ghidra-tracemadness/src/main/resources/: arangodb.properties
ghidra-tracemadness/src/main/resources/data/: accesses.aql  allobjs.aql  autostruct.aql  findptrargs.aql  findptrrets.aql  fntrace.aql  functioninfo.aql  getslice.aql  instrace.aql  minmaxtick.aql  modules.aql  objuses.aql  opdeps.aql  queries.json  rmobj.aql  space.aql  totalcoverage.aql  (+1 more)
strace-spark/: .gitignore  .justfile  README.md  pyproject.toml  setup.cfg
strace-spark/docs/source/: conf.py  index.rst
strace-spark/docs/source/_static/: custom.css
strace-spark/scripts/: devcheck.sh
strace-spark/src/spark/: __init__.py  __main__.py  _logging.py  cli.py
strace-spark/src/spark/parser/: __init__.py  errors.py  heuristics.py  signal.py  syscall.py  utils.py
strace-spark/src/spark/schema/: __init__.py  events.py
trace-tools/: .justfile  Cargo.toml
trace-tools/src/: collector.rs  lib.rs
trace-tools/src/index/: merge_set.rs  mod.rs  segment_tree.rs  spacetime_index.rs  string_index.rs  string_index_old.rs
tracer-icicle/: .justfile  Cargo.toml
tracer-icicle/src/: lib.rs
tracer-panda/: .justfile  Cargo.toml
tracer-panda/scripts/: panda_syslog.py  windows_case_copy.py
tracer-panda/src/: lib.rs
tracer-panda/src/arch/: aarch64.rs  arm.rs  i386.rs  mips.rs  mips64.rs  mipsel.rs  mod.rs  ppc.rs  x86_64.rs
tracer-pin/: .clang-format  .gitignore  .justfile  Custom.props  README.md  build.sh  clean.sh  debug_build.sh  format.sh  makefile  makefile.rules  pintool.cpp  pintool.h  pintool.vcxproj  pintool.vcxproj.filters  trace.cpp  trace.h
tracer-pin/include/ia32/: regs.h
tracer-pin/include/intel64/: regs.h
tracer-pin/old/: README.md  build.sh  trace.cpp
tracer-pin/scripts/: addr_to_file.py
tracer-qemu-user/: .justfile  Cargo.toml  README.md
tracer-qemu-user/scripts/: generate_maps.sh
tracer-qemu-user/src/: glib.rs  lib.rs  log.rs  plugin.rs  qemu.rs  registers.rs  tracefile.rs  translation_block.rs
tracer-unicorn/: .justfile  README.rst  pyproject.toml
tracer-unicorn/docs/source/: api.rst  conf.py  index.rst
tracer-unicorn/docs/source/_static/js/: no-copyright.js
tracer-unicorn/unicorn_trace/: __init__.py  aarch64.py  arm.py  lib.py  mips.py  mips64.py  mips64el.py  mipsel.py  ppc.py  ppc64.py  riscv32.py  riscv64.py  x86.py  x86_64.py
(+62 files in other folders)
