[package]
name = "dbmanager"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures = "0.3.30"
http = "1.1.0"
itertools = "0.13.0"
quick-xml = { version = "0.36.0", features = ["serialize", "overlapped-lists"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tera = "1.20.0"
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = "2.5.2"
