[package]
name = "gdb-trace-server"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "gdb-trace-server"

[dependencies]
gdbstub = "0.7.2"
clap = { workspace = true }
anyhow = { workspace = true }
gdbstub_arch = "0.3.1"
trace = { workspace = true }
dataflow.workspace = true
num-traits = "0.2.19"
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
goblin = "0.9.2"
thiserror.workspace = true
