[package]
name = "dataflow-arango"
version = "0.1.0"
edition.workspace = true

[dependencies]
dataflow-core.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread"] }
tracing.workspace = true
