[package]
name = "dataflow-jsonl"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
dataflow-core.workspace = true
tracing.workspace = true
serde_json.workspace = true
